<resources>
    <string name="app_name">LautechMobileApp</string>

    <!-- Onboarding -->
    <string name="studServices">Student Services</string>
    <string name="studServicesdes">Admissions, Clearance and Result Verification,
        Semester Enrollment, Course Registration, Results, CGPA Calculator, Electronic ID, Exam Pass and more.</string>

    <string name="schoolServ">School Services</string>
    <string name="schoolServdes">Improved student connection with real-time access to latest news, time-tables, important dates, public notices, fee payment options, and other paid services.</string>
    <string name="schoolServdes2">Learn everything to improve your skills taught by the best mentors.</string>

    <string name="eduWall">Meet the payment and fund saving needs of students and other members of the university community.</string>
    <string name="eduWalldes">eduWalletᵀᴹ</string>


    <string name="next">Next</string>
    <string name="getStart">Get Started</string>

    <!-- Login Activity -->
    <string name="loginTitle">Welcome Back!</string>
    <string name="loginDesc">Log in with credentials that you entered during registration.</string>
    <string name="userIdTextView">User ID</string>
    <string name="userIdHelper">Email/Matric No/Staff ID</string>
    <string name="passwordTextView">Password</string>
    <string name="passwordHelper">********</string>
    <string name="forgotPass">Forgot password?</string>
    <string name="signIn">Sign in</string>
    <string name="dontHaveAcct">Dont have an account? Create Here</string>
    <string name="createHere">Create Here</string>
    <string name="sureToExit">Sure To Exit ?</string>
    <string name="no">No</string>
    <string name="yesToExit">Yes, Exit</string>

    <!-- Account setup activity -->
    <string name="accountSetup">Account Setup</string>
    <string name="AcctSetDesc">What account would you like to setup?</string>
    <string name="new_stud">New Student</string>
    <string name="exist_stud">Existing Student</string>
    <string name="alumn">Alumnus</string>
    <string name="staff">Staff</string>
    <string name="haveAcct">Have an account? Sign in</string>

    <!-- Register Existing STudents Activity -->
    <string name="createAccount">Create Account</string>
    <string name="fillRequired">Fill the required input fields to register.</string>
    <string name="matricText">Matric Number</string>
    <string name="matricHelper">UTME No/Email/Form No</string>
    <string name="dobText">Date of Birth</string>
    <string name="dobHelper">DD/MM/YYYY</string>
    <string name="surnameText">Surname</string>
    <string name="Seyi">Seyi</string>
    <string name="firstnameText">First Name</string>
    <string name="martins">Martins</string>
    <string name="othernameText">Other Name</string>
    <string name="ola">Ola</string>
    <string name="phoneNumText">Phone Number</string>
    <string name="phoneNumTextHelper">07011223345</string>
    <string name="session">Select Session</string>
    <string name="sessionHelper">2021/2022</string>
    <string name="continueBtn">Continue</string>

    <!-- Register Staff ACtivity -->
    <string name="staffNumText">Staff Number</string>
    <string name="staffNumHelper">124/221</string>

    <!-- Register new  student Activity -->
    <string name="loginWithDataRegistration">Log in with your data that you entered during registration.</string>
    <string name="genderHelper">Male</string>
    <string name="genderTextview">Gender</string>
    <string name="stateOfOr">State of Origin</string>
    <string name="stateOfOrHelper">Osun</string>
    <string name="email">Email</string>
    <string name="emailHelper">Ola@gmail.com</string>
    <string name="admissionType">Admission Type</string>
    <string name="admissionTypeHelper">Masters</string>
    <string name="signUp">Sign up</string>

    <!-- OTP activity -->
    <!-- <string name="hiSeyi">Hi, Seyi Martins Ola</string>
    <string name="phoneNumber">070XXXXXX66</string>-->
    <string name="lorem">Input your OTP below to complete registration</string>
    <string name="enterOTP">Enter the OTP Code</string>
    <string name="seenOtP">We’ve sent you an OTP code to</string>
    <string name="resend">Resesnd OTP</string>
    <string name="success">Success</string>
    <string name="succCreated">Your account has been successfully created</string>

    <!-- Dashboard Activity -->
    <string name="goodMorn">Good Morning,</string>
    <string name="search">Search your courses, news …</string>
    <string name="todaysTime">Today’s Tabletime</string>
    <string name="newsText">News</string>
    <string name="seeAll">See all</string>
    <string name="PGschool">Post Graduate School</string>
    <string name="temporaryText">Amet minim mollit non deserunt ullamco est sit aliqua dolor do.</string>
    <string name="courseText">Courses</string>
    <string name="courseImage">Course Image</string>

    <!-- Overview fragment -->
    <string name="discover">Discover</string>
    <string name="instruc">Instructors</string>
    <string name="requirement">Requirements</string>

    <!-- Tasks Activity -->
    <string name="taskText">Tasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- News Activity -->
    <string name="trend">Trending</string>
    <string name="learnMore">learn more</string>

    <!-- News detail activity -->
    <string name="writtenBy">Written by</string>

    <!-- Wallet Activity -->
    <string name="walletText">Wallet</string>
    <string name="walletId">ID :</string>
    <string name="walletBal">Wallet Balance</string>
    <string name="transactText">Transactions</string>

    <!-- Profile Activity -->
    <string name="profileText">Profile</string>
    <string name="accountSetting">ACCOUNT SETTINGS</string>
    <string name="application">Application</string>
    <string name="logOut">Logout</string>
    <string name="changePhoneNum">Change Phone Number</string>
    <string name="digitalExam">Digital Exam Pass</string>
    <string name="schoolId">School ID Card QR</string>
    <string name="cgpaPlanner">CGPA Planner</string>
    <string name="result">Results</string>

    <!-- Personal information activity -->
    <string name="editInfo">EDIT INFORMATION</string>
    <string name="saveAndGo">Save and Go Back</string>
    <string name="saveAndContinue">Save and Continue</string>

    <!-- Personal Information Activity 2 -->
    <string name="departmentTextView">Department</string>
    <string name="departmentHelper">Computer Science</string>
    <string name="facultyTextView">Faculty</string>
    <string name="facultyHelper">Science</string>
    <string name="levelTextView">Level</string>
    <string name="levelHelper">300 Level</string>
    <string name="courseAdviserTextView">Course Adviser</string>
    <string name="courseAdviserHelper">Dr, Akinola</string>
    <string name="unionPositionTextView">Union Position</string>
    <string name="unionPositionHelper">NIL</string>
    <string name="saveBtnText">Save</string>

    <!-- SChool Id Card Activity -->
    <string name="schoolIdCardText">School ID Card QR</string>

    <!-- Digital exam pass activity -->
    <string name="digitalExamPassText">Digital Exam Pass</string>

    <!-- Results activity -->
    <string name="cgpaText">CGPA</string>
    <string name="dash">---</string>
    <string name="comma">,</string>
</resources>